--- a/environment.yml
+++ b/environment.yml
@@ -12,5 +12,5 @@ dependencies:
      - trimesh==3.15.8
      - cython==0.29.23
      - python-fcl==0.7.0.1
-     - graphviz==0.20.1
+     - tqdm==4.64.1
    - git
