--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ __temp/
 
 # >>>>>>>>>>>>> Python >>>>>>>>>>>>>
 __pycache__/
-
+src/__pycache__/
 
 # >>>>>>>>>>>>> PyInstaller >>>>>>>>>>>>>
 build/
