--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,8 @@
 # to update the environment: conda env update --name myenv --file environment.yml --prune
 # or update with environment activated: conda env update --file environment.yml --prune
 
+# for exe pyinstaller: install "conda install pywin32" on win machine
+
 name: collide
 channels:
     - conda-forge
@@ -15,4 +17,5 @@ dependencies:
      - tqdm==4.64.1
      - graphviz==0.20.1
      - pyinstaller==5.6.2
+     - pillow==9.3.0
    - git
